feat: add gist comment edit and delete
